--- a/ui/Selector.ui
+++ b/ui/Selector.ui
@@ -6,23 +6,53 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>810</width>
-    <height>208</height>
+    <width>950</width>
+    <height>174</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>768</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Geo-SAM Tool</string>
   </property>
   <widget class="QWidget" name="GeoSAM_2">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>16777215</width>
+     <height>200</height>
+    </size>
+   </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1">
-      <item>
+     <layout class="QGridLayout" name="gridLayout_5">
+      <item row="0" column="0">
        <widget class="QFrame" name="Top">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>1</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>100</height>
+         </size>
+        </property>
         <property name="toolTip">
          <string>Shortcut: C</string>
         </property>
-        <layout class="QHBoxLayout" name="top_row" stretch="2,1,2,1,1">
+        <layout class="QHBoxLayout" name="top_row" stretch="6,3,6,3,2">
          <property name="spacing">
           <number>1</number>
          </property>
@@ -49,10 +79,7 @@
            <property name="title">
             <string>Add Points</string>
            </property>
-           <layout class="QHBoxLayout" name="horizontalLayout_2">
-            <property name="spacing">
-             <number>5</number>
-            </property>
+           <layout class="QGridLayout" name="gridLayout_3">
             <property name="leftMargin">
              <number>5</number>
             </property>
@@ -65,7 +92,7 @@
             <property name="bottomMargin">
              <number>5</number>
             </property>
-            <item>
+            <item row="0" column="0">
              <widget class="QPushButton" name="pushButton_fg">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -87,7 +114,7 @@
               </property>
              </widget>
             </item>
-            <item>
+            <item row="0" column="1">
              <widget class="QPushButton" name="pushButton_bg">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -312,7 +339,7 @@
               </property>
               <property name="minimumSize">
                <size>
-                <width>100</width>
+                <width>80</width>
                 <height>25</height>
                </size>
               </property>
@@ -330,9 +357,21 @@
         </layout>
        </widget>
       </item>
-      <item>
-       <widget class="QFrame" name="Bottom">
-        <layout class="QHBoxLayout" name="Bottom_row" stretch="6,1">
+      <item row="1" column="0">
+       <widget class="QgsCollapsibleGroupBox" name="Bottom">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>1</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>100</height>
+         </size>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout" stretch="9,1">
          <property name="spacing">
           <number>1</number>
          </property>
@@ -390,7 +429,7 @@
                  <property name="minimumSize">
                   <size>
                    <width>0</width>
-                   <height>25</height>
+                   <height>0</height>
                   </size>
                  </property>
                  <property name="text">
@@ -432,7 +471,7 @@
                  <property name="minimumSize">
                   <size>
                    <width>0</width>
-                   <height>25</height>
+                   <height>0</height>
                   </size>
                  </property>
                  <property name="text">
@@ -449,9 +488,9 @@
          <item>
           <widget class="QGroupBox" name="EditModeGroupBox_2">
            <property name="title">
-            <string>Feature Extent</string>
+            <string>Feat. Extent</string>
            </property>
-           <layout class="QGridLayout" name="EditMode_2">
+           <layout class="QGridLayout" name="feature_extent">
             <property name="leftMargin">
              <number>5</number>
             </property>
@@ -477,8 +516,8 @@
               </property>
               <property name="minimumSize">
                <size>
-                <width>100</width>
-                <height>25</height>
+                <width>0</width>
+                <height>0</height>
                </size>
               </property>
               <property name="text">
@@ -501,6 +540,12 @@
   </widget>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>QgsCollapsibleGroupBox</class>
+   <extends>QGroupBox</extends>
+   <header>qgscollapsiblegroupbox.h</header>
+   <container>1</container>
+  </customwidget>
   <customwidget>
    <class>QgsDockWidget</class>
    <extends>QDockWidget</extends>
