--- a/ui/Selector.ui
+++ b/ui/Selector.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>950</width>
+    <width>852</width>
     <height>174</height>
    </rect>
   </property>
@@ -15,6 +15,9 @@
     <width>0</width>
     <height>0</height>
    </size>
+  </property>
+  <property name="features">
+   <set>QDockWidget::DockWidgetClosable|QDockWidget::DockWidgetMovable</set>
   </property>
   <property name="windowTitle">
    <string>Geo-SAM Tool</string>
@@ -33,6 +36,18 @@
     </size>
    </property>
    <layout class="QGridLayout" name="gridLayout">
+    <property name="leftMargin">
+     <number>5</number>
+    </property>
+    <property name="topMargin">
+     <number>5</number>
+    </property>
+    <property name="rightMargin">
+     <number>5</number>
+    </property>
+    <property name="bottomMargin">
+     <number>5</number>
+    </property>
     <item row="0" column="0">
      <layout class="QGridLayout" name="gridLayout_5" rowstretch="0,0">
       <property name="verticalSpacing">
@@ -53,7 +68,7 @@
          </size>
         </property>
         <property name="toolTip">
-         <string>Shortcut: C</string>
+         <string/>
         </property>
         <layout class="QHBoxLayout" name="top_row" stretch="6,3,6,3,2">
          <property name="spacing">
@@ -78,6 +93,9 @@
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
+           </property>
+           <property name="toolTip">
+            <string>Press &quot;Tab&quot; to loop prompts (shortcut)</string>
            </property>
            <property name="title">
             <string>Add Points</string>
@@ -110,10 +128,10 @@
                </size>
               </property>
               <property name="toolTip">
-               <string>Press &quot;Tab&quot; to loop prompts (shortcut)</string>
+               <string>Add foreground points (Tab)</string>
               </property>
               <property name="text">
-               <string>Foreground</string>
+               <string>FG</string>
               </property>
              </widget>
             </item>
@@ -128,14 +146,14 @@
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>25</height>
+                <height>0</height>
                </size>
               </property>
               <property name="toolTip">
-               <string>Press &quot;Tab&quot; to loop prompts (shortcut)</string>
+               <string>Add background points (Tab)</string>
               </property>
               <property name="text">
-               <string>Background</string>
+               <string>BG</string>
               </property>
              </widget>
             </item>
@@ -146,6 +164,9 @@
           <widget class="QGroupBox" name="BBoxPrompt">
            <property name="enabled">
             <bool>true</bool>
+           </property>
+           <property name="toolTip">
+            <string>Press &quot;Tab&quot; to loop prompts (shortcut)</string>
            </property>
            <property name="title">
             <string>Add BBox</string>
@@ -176,8 +197,8 @@
               </property>
               <property name="minimumSize">
                <size>
-                <width>100</width>
-                <height>25</height>
+                <width>0</width>
+                <height>0</height>
                </size>
               </property>
               <property name="maximumSize">
@@ -187,10 +208,10 @@
                </size>
               </property>
               <property name="toolTip">
-               <string>Press &quot;Tab&quot; to loop prompts (shortcut)</string>
+               <string>Add bounding box (Tab)</string>
               </property>
               <property name="text">
-               <string>Rectangle</string>
+               <string>BBox</string>
               </property>
              </widget>
             </item>
@@ -199,6 +220,9 @@
          </item>
          <item>
           <widget class="QGroupBox" name="ClearPromptGroupBox">
+           <property name="toolTip">
+            <string>Press &quot;C&quot; to clear all prompts, &quot;Z&quot; to undo last prompt </string>
+           </property>
            <property name="title">
             <string>Clear/Undo Prompts</string>
            </property>
@@ -228,12 +252,12 @@
               </property>
               <property name="minimumSize">
                <size>
-                <width>100</width>
-                <height>25</height>
+                <width>0</width>
+                <height>0</height>
                </size>
               </property>
               <property name="toolTip">
-               <string>Press &quot;C&quot; to clear (shortcut)</string>
+               <string>Clear all prompts (C)</string>
               </property>
               <property name="text">
                <string>Clear</string>
@@ -250,12 +274,12 @@
               </property>
               <property name="minimumSize">
                <size>
-                <width>100</width>
-                <height>25</height>
+                <width>0</width>
+                <height>0</height>
                </size>
               </property>
               <property name="toolTip">
-               <string>Press &quot;Z&quot; to undo (shortcut)</string>
+               <string>Undo last prompt (Z)</string>
               </property>
               <property name="text">
                <string>Undo</string>
@@ -267,6 +291,9 @@
          </item>
          <item>
           <widget class="QGroupBox" name="PolygonGroupBox">
+           <property name="toolTip">
+            <string>Press &quot;S&quot; to save current segementation results</string>
+           </property>
            <property name="title">
             <string>Save Polygon</string>
            </property>
@@ -296,12 +323,12 @@
               </property>
               <property name="minimumSize">
                <size>
-                <width>100</width>
-                <height>25</height>
+                <width>0</width>
+                <height>0</height>
                </size>
               </property>
               <property name="toolTip">
-               <string>Press &quot;S&quot; to save (shortcut)</string>
+               <string>Save current segmentation results (S)</string>
               </property>
               <property name="text">
                <string>Save </string>
@@ -314,7 +341,7 @@
          <item>
           <widget class="QGroupBox" name="EditModeGroupBox">
            <property name="title">
-            <string>Lable Mode</string>
+            <string>Mode</string>
            </property>
            <layout class="QGridLayout" name="EditMode">
             <property name="leftMargin">
@@ -342,9 +369,12 @@
               </property>
               <property name="minimumSize">
                <size>
-                <width>80</width>
-                <height>25</height>
+                <width>0</width>
+                <height>0</height>
                </size>
+              </property>
+              <property name="toolTip">
+               <string>Toggle to enable the labelling tool</string>
               </property>
               <property name="text">
                <string>Enable</string>
@@ -431,6 +461,9 @@
               <layout class="QHBoxLayout" name="horizontalLayout_dir">
                <item>
                 <widget class="QgsFileWidget" name="QgsFile_shapefile">
+                 <property name="toolTip">
+                  <string>Input or choose the shape file path to append the polygon results</string>
+                 </property>
                  <property name="options">
                   <set>QFileDialog::DontConfirmOverwrite</set>
                  </property>
@@ -444,8 +477,11 @@
                    <height>0</height>
                   </size>
                  </property>
+                 <property name="toolTip">
+                  <string>Press to import the shapefile</string>
+                 </property>
                  <property name="text">
-                  <string>Load</string>
+                  <string>Import</string>
                  </property>
                 </widget>
                </item>
@@ -476,7 +512,11 @@
              <item row="2" column="0">
               <layout class="QHBoxLayout" name="Feature_folder" stretch="0,0">
                <item>
-                <widget class="QgsFileWidget" name="QgsFile_feature"/>
+                <widget class="QgsFileWidget" name="QgsFile_feature">
+                 <property name="toolTip">
+                  <string>Input or choose the image feature folder to load</string>
+                 </property>
+                </widget>
                </item>
                <item>
                 <widget class="QPushButton" name="pushButton_load_feature">
@@ -485,6 +525,9 @@
                    <width>0</width>
                    <height>0</height>
                   </size>
+                 </property>
+                 <property name="toolTip">
+                  <string>Press to load the image feature</string>
                  </property>
                  <property name="text">
                   <string>Load</string>
@@ -500,7 +543,7 @@
          <item>
           <widget class="QGroupBox" name="EditModeGroupBox_2">
            <property name="title">
-            <string>Feat. Extent</string>
+            <string>Extent</string>
            </property>
            <layout class="QGridLayout" name="feature_extent">
             <property name="leftMargin">
@@ -531,6 +574,9 @@
                 <width>0</width>
                 <height>0</height>
                </size>
+              </property>
+              <property name="toolTip">
+               <string>Toggle to show the extent of the image features (operable extent )</string>
               </property>
               <property name="text">
                <string>Show</string>
