--- a/ui/EncoderCopilot.ui
+++ b/ui/EncoderCopilot.ui
@@ -6,16 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>856</width>
-    <height>192</height>
+    <width>1007</width>
+    <height>232</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>524287</width>
+    <height>524287</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Encoder Copilot</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
-   <layout class="QGridLayout" name="gridLayout_8">
-    <item row="0" column="0">
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
      <widget class="QFrame" name="horizontalFrame">
       <property name="maximumSize">
        <size>
@@ -23,7 +29,7 @@
         <height>360</height>
        </size>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,4,0,0">
+      <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="3,4,0,1">
        <item>
         <widget class="QGroupBox" name="groupBox_3">
          <property name="title">
@@ -33,11 +39,53 @@
           <item row="1" column="0">
            <widget class="QGroupBox" name="groupBox_2">
             <property name="title">
-             <string>Bands</string>
+             <string>RGB Bands</string>
             </property>
-            <layout class="QGridLayout" name="gridLayout_2">
-             <item row="0" column="0">
-              <widget class="QgsRasterBandComboBox" name="mRasterBandComboBox"/>
+            <layout class="QHBoxLayout" name="horizontalLayout_2">
+             <item>
+              <widget class="QGroupBox" name="groupBox_9">
+               <property name="title">
+                <string>Red</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+               <layout class="QGridLayout" name="gridLayout_9">
+                <item row="0" column="0">
+                 <widget class="QgsRasterBandComboBox" name="mRasterBandComboBox_R"/>
+                </item>
+               </layout>
+              </widget>
+             </item>
+             <item>
+              <widget class="QGroupBox" name="groupBox_10">
+               <property name="title">
+                <string>Green</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+               <layout class="QGridLayout" name="gridLayout_8">
+                <item row="0" column="0">
+                 <widget class="QgsRasterBandComboBox" name="mRasterBandComboBox_G"/>
+                </item>
+               </layout>
+              </widget>
+             </item>
+             <item>
+              <widget class="QGroupBox" name="groupBox_11">
+               <property name="title">
+                <string>Blue</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+               <layout class="QGridLayout" name="gridLayout_11">
+                <item row="0" column="0">
+                 <widget class="QgsRasterBandComboBox" name="mRasterBandComboBox_B"/>
+                </item>
+               </layout>
+              </widget>
              </item>
             </layout>
            </widget>
@@ -64,7 +112,14 @@
          </property>
          <layout class="QGridLayout" name="gridLayout_4">
           <item row="0" column="0">
-           <widget class="QgsExtentGroupBox" name="mExtentGroupBox"/>
+           <widget class="QgsExtentGroupBox" name="mExtentGroupBox">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -72,26 +127,40 @@
        <item>
         <widget class="QGroupBox" name="groupBox_5">
          <property name="title">
-          <string>View Boundaries</string>
+          <string>Boundary Setting</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_6">
           <item row="0" column="0">
            <widget class="QGroupBox" name="groupBox_6">
             <property name="title">
-             <string>Scale Reference</string>
+             <string>Resolution Scale</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
             </property>
             <layout class="QGridLayout" name="gridLayout_5">
              <item row="0" column="0">
-              <widget class="QgsDoubleSpinBox" name="mQgsDoubleSpinBox">
+              <widget class="QgsDoubleSpinBox" name="mBoxResolutionScale">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="decimals">
+                <number>2</number>
+               </property>
+               <property name="minimum">
+                <double>0.100000000000000</double>
+               </property>
+               <property name="maximum">
+                <double>100.000000000000000</double>
+               </property>
+               <property name="singleStep">
+                <double>0.500000000000000</double>
+               </property>
                <property name="value">
                 <double>1.000000000000000</double>
-               </property>
-              </widget>
-             </item>
-             <item row="0" column="1">
-              <widget class="QPushButton" name="pushButton">
-               <property name="text">
-                <string>View Scale</string>
                </property>
               </widget>
              </item>
@@ -101,23 +170,31 @@
           <item row="1" column="0">
            <widget class="QGroupBox" name="groupBox_7">
             <property name="title">
-             <string>Overlaps Reference</string>
+             <string>Overlap</string>
             </property>
-            <layout class="QFormLayout" name="formLayout">
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+            <layout class="QGridLayout" name="gridLayout_2">
              <item row="0" column="0">
-              <widget class="QgsDoubleSpinBox" name="mQgsDoubleSpinBox_2">
+              <widget class="QgsDoubleSpinBox" name="mBoxOverlap">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <property name="suffix">
                 <string>%</string>
                </property>
+               <property name="maximum">
+                <double>99.000000000000000</double>
+               </property>
+               <property name="singleStep">
+                <double>5.000000000000000</double>
+               </property>
                <property name="value">
                 <double>50.000000000000000</double>
-               </property>
-              </widget>
-             </item>
-             <item row="0" column="1">
-              <widget class="QPushButton" name="pushButton_2">
-               <property name="text">
-                <string>View Overlap</string>
                </property>
               </widget>
              </item>
@@ -134,7 +211,7 @@
          </property>
          <layout class="QGridLayout" name="gridLayout_7">
           <item row="0" column="0">
-           <widget class="QPushButton" name="pushButton_3">
+           <widget class="QPushButton" name="pushButton_CopySetting">
             <property name="text">
              <string>Copy Settings</string>
             </property>
